deployment/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zero2prod-ingress
  namespace: zero2prod
spec:
  ingressClassName: nginx
  rules:
  - host: "kubernetes.docker.internal"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:          
            name: zero2prod
            port: 
              number: 8000
